# morphoclass

./: .dockerignore  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  .readthedocs.yml  AUTHORS.md  CONTRIBUTING.md  LICENSE.txt  README.md  constraints.txt  install.sh  pyproject.toml  requirements-extras.txt  requirements.txt  setup.cfg  tox.ini
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yaml
docker/: .env.example  morphoclass.Dockerfile  utils.sh
docs/: .gitignore  generate_metadata.py  requirements.txt
docs/source/: conf.py  index.rst
docs/source/_api/: morphoclass.augmentation.rst  morphoclass.cleanlab.rst  morphoclass.console.cmd_evaluate.rst  morphoclass.console.cmd_organise_dataset.rst  morphoclass.console.cmd_plot_dataset_stats.rst  morphoclass.console.cmd_train.rst  morphoclass.console.evaluate.rst  morphoclass.console.helpers.rst  morphoclass.console.main.rst  morphoclass.console.performance_report.rst  morphoclass.console.performance_table.rst  morphoclass.console.transfer_learning.rst  morphoclass.constants.rst  morphoclass.data.morphology_data.rst  morphoclass.data.morphology_data_loader.rst  morphoclass.data.morphology_dataset.rst  morphoclass.data.morphology_embedding_dataset.rst  morphoclass.data.tns_dataset.rst  morphoclass.feature_extractors.pyramidal_cells.rst  morphoclass.layers.bidirectional_res_block.rst  morphoclass.layers.cat.rst  morphoclass.layers.cheb_conv_separable.rst  morphoclass.layers.perslay.rst  morphoclass.layers.running_std.rst  morphoclass.metrics.rst  morphoclass.models.bidirectional_net.rst  morphoclass.models.cnnet.rst  morphoclass.models.concatecnnet.rst  morphoclass.models.concatenet.rst  morphoclass.models.man_res_nets.rst  morphoclass.orientation.rst  morphoclass.training.cli.rst  morphoclass.training.reports.transfer_learning_report.rst  morphoclass.training.trainers.rst  (+37 more)
dvc/: .gitignore  README.md  dvc.yaml  generate-feature-stages.py  generate_params.py  make_training_params.py  make_training_params_alt_neurites.py  params.yaml
dvc/.dvc/: config
dvc/data/: .gitignore  mcar-luigi-logging.cfg  mcar-luigi.cfg  preprocess-janelia.py
dvc/data/final/: .gitignore  (+8 more)
dvc/extract-features-morphometrics/: .gitignore
dvc/training/: make_configs.py
src/morphoclass/: __init__.py  __main__.py  augmentation.py  cleanlab.py  constants.py  deepwalk.py  metrics.py  model_utils.py  orientation.py  report.py  serialization.py  types.py  utils.py  vis.py
tests/data/: L5_data.csv  L5_data2.csv  L5_data_no_labels.csv  L6_data.csv  make-random-neurons.py
tests/unit/: conftest.py  test_augmentation.py  test_cleanlab.py  test_data.py  test_data_filters.py  test_layers.py  test_logging.py  test_metrics.py  test_model_utils.py  test_models.py  test_perslay.py  test_training.py  test_utils.py  test_vis.py
(+400 files in other folders)
