[metadata]
name = morphoclass
description = Package for classifying neuron morphologies
long_description = file: README.md
long_description_content_type = text/markdown
author = Blue Brain Project, EPFL
maintainer = bbp-ou-machinelearning
maintainer_email = bbp-ou-machinelearning@groupes.epfl.ch
license = BBP-internal-confidential
url = https://github.com/BlueBrain/morphoclass
project_urls =
    Source = https://github.com/BlueBrain/morphoclass
    Documentation = https://github.com/BlueBrain/morphoclass
    Tracker = https://github.com/BlueBrain/morphoclass/issues

[options]
package_dir =
    = src
packages = find:
; No torch wheels for 3.10 available yet (torch==1.10.0)
; No libsonata wheels for 3.9 available yet (libsonata==0.1.9)
; tmd>=2.1.0: return type changed for tmd.Topology.methods.tree_to_property_barcode
; morphology-workflows>=0.3.0: https://github.com/BlueBrain/morphology-workflows/pull/31
; NeuroR>=1.6.1: https://github.com/BlueBrain/NeuroR/pull/107, https://github.com/BlueBrain/NeuroR/pull/108
python_requires = >=3.8,<3.9
install_requires =
    PyYAML
    captum
    cleanlab==1.0.1
    click
    dash
    dash-bootstrap-components
    dash-core-components
    dash-html-components
    dill
    gensim>=4.1.0
    imbalanced-learn
    jinja2
    matplotlib
    morphio
    morphology-workflows>=0.3.0
    networkx
    neurom>=3
    NeuroR>=1.6.1
    neurots
    numpy
    pandas
    plotly
    scikit-learn
    scipy
    seaborn
    shap[plots]
    tmd>=2.2.0
    torch
    tqdm
    umap-learn
    xgboost>1.2.1,<1.5.0

[options.package_data]
morphoclass =
    py.typed
    templates/*.html
    training/reports/transfer_learning_report_template.html

[options.packages.find]
where = src

[options.extras_require]
docs =
    sphinx
    sphinx-bluebrain-theme
    sphinx-rtd-theme
dev =
    dvc[ssh]>=2
    pre-commit
    pytest
    pytest-cov
    pytest-mock
    tox

[options.entry_points]
console_scripts =
    morphoclass = morphoclass.console.main:cli
